--- a/school/setPassword.html
+++ b/school/setPassword.html
@@ -44,7 +44,7 @@
 
 
 		</form>
-		<div style="padding:32px;background-color:#F7F7F7;">
+		<div style="padding:32px;background-color:#FFF;">
 			<button id="btn_set_password_post" type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">确定</button>
 		</div>
 	</div>
