--- a/school/setPage.html
+++ b/school/setPage.html
@@ -33,11 +33,11 @@
 	<div class="mui-content" >
 		<form class="mui-input-group" style="padding: 5px 0px;">  
 			<div id="modify_password"  class="mui-input-row" style="margin: 5px 0px;">
-				<label>修改密码  </label> 
+				<label style="width:45%;">修改密码  </label> 
 				<div class="mui-icon mui-icon-arrowright my_arrowr"  ></div>
 			</div>
 			<div id="personal_set_link"  class="mui-input-row" style="margin: 5px  0px;">
-				<label>修改个人信息</label> 
+				<label style="width:45%;">修改个人信息</label> 
 				<div class="mui-icon mui-icon-arrowright my_arrowr"></div>
 			</div>
   
@@ -45,7 +45,7 @@
 
 
 		</form>
-		<div style="padding:32px;background-color:#F7F7F7;">
+		<div style="padding:32px;background-color:#FFF;">
 			<button id="btn_set_quit_app" type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">退出登录</button>
 		</div>
 	</div>
