大家作品样式调整、静态数据清除

--- a/school/activityList.html
+++ b/school/activityList.html
@@ -38,7 +38,7 @@
 					<div id="scroll1" class="mui-scroll-wrapper">
 						<div class="mui-scroll" style="min-height: 550px;">
 							<ul id="activity_list_list" class="mui-table-view">
-								 <li class="mui-table-view-cell">
+								 <!--<li class="mui-table-view-cell">
 								 	<a id="aa" href="#">
 								 		<div class="show-desc">
 											<div class="show-desc-right">
@@ -69,7 +69,7 @@
 										</div>
 
 								 	</a>
-								 </li>
+								 </li>-->
 								 	
 							</ul>
 						</div>
