--- a/school/rankingList.html
+++ b/school/rankingList.html
@@ -113,11 +113,11 @@
 				data: {
 					showType:1,
 					studentRanking:[
-					 {aswStudentName:'123a',aswPointNum:'111'}
-					,{aswStudentName:'123b',aswPointNum:'111'}
-					,{aswStudentName:'123c',aswPointNum:'11'}
-					,{aswStudentName:'123d',aswPointNum:'5'}
-					,{aswStudentName:'123e',aswPointNum:'1'}
+//					 {aswStudentName:'123a',aswPointNum:'111'}
+//					,{aswStudentName:'123b',aswPointNum:'111'}
+//					,{aswStudentName:'123c',aswPointNum:'11'}
+//					,{aswStudentName:'123d',aswPointNum:'5'}
+//					,{aswStudentName:'123e',aswPointNum:'1'}
 					],
 					activityRanking:[
 //					 {actName:'456',showTotalPointNum:78}
