--- a/school/setTeacherfo.html
+++ b/school/setTeacherfo.html
@@ -62,7 +62,7 @@
 				<input type="text"  v-model="teacherInfo.description" placeholder="个人简介"/>
 			</div>
 		</form>
-		<div style="padding:32px;background-color:#F7F7F7;">
+		<div style="padding:32px;background-color:#FFF;">
 			<button id="btn_set_teacher_post" type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">确定</button>
 		</div>
 	</div>
