--- a/school/welcomePage.html
+++ b/school/welcomePage.html
@@ -13,7 +13,7 @@
 		<style>
 			html,
 			body {
-				background-color: #efeff4;
+				background-color: #FFF;
 			}
 			/*.main_bg{
 				background: -webkit-linear-gradient(bottom,  #FED361,#FEC332); /* Safari 5.1 - 6.0 */
