--- a/school/courseDir.html
+++ b/school/courseDir.html
@@ -23,7 +23,7 @@
 <body>
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		<a style="margin-top: 32px;position: fixed;">课程</a>
+		<a class="mui-pull-left head-pull-left">课程</a>
 		<img src="../images/head-dz.png" class="head-dz"/>
 		<h1 class="mui-title">课程目录</h1>
 	</header>
