--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -26,7 +26,7 @@
 		
 	<header class="mui-bar mui-bar-nav" style="height: 272px;
     background: url(../images/school/psct_top.png);background-size: cover">
-    		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="font-size:36px;"></a>
+    		<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="font-size:36px;"></a>-->
     		<img src="../images/school/setting.png" id="personal_center_set_page" class="mui-pull-right">
 		<img src="../images/school/head-btm.png" class="head-pic-btm">
 		<img src="../images/school/ct-dianzhui.png" class="dz-icon">
@@ -62,7 +62,7 @@
 				</a>
 			</div>
 		</div>
-		<div  style="margin-top: 20px;">			
+		<div v-if="userInfo.roleType==2" style="margin-top:32px;">			
 			<div id="personal_teacher_ranking_link" class="myh5_card myh5_card2">
 				<a href="#" class="top psct_purple">
 					<img src="../images/school/tc_02.png" class="photo1" />
