--- a/school/studentCenter.html
+++ b/school/studentCenter.html
@@ -17,7 +17,7 @@
 <body>
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		<a class="mui-pull-right setPwd" > 修改密码 </a>
+		<a class="mui-pull-right head-pull-right" > 修改密码 </a>
 		<img src="../images/head-dz.png" class="head-dz"/>
 		<h1 class="mui-title">修改学生信息</h1>
 	</header>
