--- a/school/activityList.html
+++ b/school/activityList.html
@@ -105,7 +105,8 @@
 		var vm_activity_list = new Vue({
 			el: '#activity_list_content',
 			data: {
-				 userInfo:{roleType:3}
+				 userInfo:{roleType:3},
+				 tcId:0
 			},
 			methods:{
 //				getFileName:function(item){
@@ -152,7 +153,7 @@
 			//console.info(JSON.stringify(courseList));
 			userPicker.setData(courseList);
 			app.getCourseAllOption(function(data){
-				if(data.code==0){ 
+				if(data.code==0){
 					if(data.objectList){
 						for(var i=0; i<data.objectList.length;i++){ 
 							courseList.push(
@@ -160,6 +161,7 @@
 									value:data.objectList[i].tcId,
 									text:data.objectList[i].tcName}
 								);
+								vm_activity_list.tcId=data.objectList[i].tcId; //学生的情况只有一个班级，所以这里先获取班级信息。
 						}
 					}
 					//console.info(JSON.stringify(courseList));
@@ -354,23 +356,35 @@
 	
 	
 	function op_exchange_area(){
-		userPicker.show(function(items) {
-			console.info('op_exchange_area>>>>>>>>item');
-			console.info(JSON.stringify(items));
-			if(items[0].value>0){
-				mui.fire(webview_activity_exchange_area, 'get_activity_exchange_area', {
-					classId: items[0].value
-				});
-				setTimeout(function () {
-					webview_activity_exchange_area.show("slide-in-right", 300);
-				},150); 
+		if(vm_activity_list.userInfo.roleType==3){
+			if(vm_activity_list.tcId==0){
+				plus.nativeUI.toast('请先选课并加入班级！');
 			}else{
-				plus.nativeUI.toast('请选择班级！');
+				op_activity_exchange_area(vm_activity_list.tcId);
 			}
-		});
+		}else {
+			userPicker.show(function(items) {
+				console.info('op_exchange_area>>>>>>>>item');
+				console.info(JSON.stringify(items));
+				if(items[0].value>0){
+					op_activity_exchange_area(items[0].value);
+				}else{
+					plus.nativeUI.toast('请选择班级！');
+				}
+			});
+		}
 		
 	}
 	
+	
+	function op_activity_exchange_area(tcId){
+		mui.fire(webview_activity_exchange_area, 'get_activity_exchange_area', {
+			classId: tcId 
+		});
+		setTimeout(function () {
+			webview_activity_exchange_area.show("slide-in-right", 300);
+		},150); 
+	}
 	/**
 	 * 打开目录详情
 	 * 
